tools/nexus/test/fixtures/quality-gates/fail/docs/ARCH/CYCLE_A_DOC.mdc
> Breadcrumbs
> Layer: ARCH
> Upstream: N/A
> Downstream: docs/ARCH/CYCLE_B_DOC.mdc

# Cycle A Document
## 目次
- [1. Section](#1-section)
- [1.1. Detail](#11-detail)
- [2. Scope](#2-scope)

## 1. Section
このドキュメントは循環参照の片側です。

### 1.1. Detail
Downstream で CYCLE_B_DOC を参照します。

## 2. Scope
#### 扱う内容
- 含まれる: 循環参照の検証

#### 扱わない内容
- 含まれない: その他の検証
